--- a/ntt_test/templates/index.html
+++ b/ntt_test/templates/index.html
@@ -7,7 +7,8 @@
     <title>Ntt test</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    
 </head>
 <body>
     <div class="container">
@@ -42,8 +43,10 @@
                 <thead class="thead-dark" id="router_details">
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Name</th>
+                    <th scope="col">SapId</th>
+                    <th scope="col">Hostname</th>
                     <th scope="col">Ip Address</th>
+                    <th scope="col">Mac Address</th>
                     <th scope="col">Action</th>
                   </tr>
                 </thead>
@@ -51,8 +54,10 @@
                     {% for router in routers %}
                         <tr>
                             <td scope="row" class="counter_id">{{ router.id }}</td>
-                            <td>{{ router.name }}</td>
+                            <td>{{ router.sap_id }}</td>
+                            <td>{{ router.hostname }}</td>
                             <td>{{ router.ip_address }}</td>
+                            <td>{{ router.mac_address }}</td>
                             <td colspan="2"> <span onclick="editRouter({{ router.id }})"> Edit </span>
                                 | <span onclick="deleteRouter({{ router.id }})">Delete</span> </td>
                         </tr>
