API integration added

--- a/ntt_test/templates/index.html
+++ b/ntt_test/templates/index.html
@@ -26,7 +26,10 @@
                     {% endbuttons %}
                 </form>
             </div>
-            <div class="col-3"></div>
+            <div class="col-3">
+                <p>List of Router details</p>
+                <a href="/listRouterByApi/" class="btn btn-primary" role="button">Call Api</a>
+            </div>
 
         </div>
         
